.deprecated/cluster/service/firefly/manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: firefly
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: firefly
  labels:
    app: firefly
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      nodeSelector:
        platform.io/type: main
      containers:
        - name: firefly
          image: fireflyiii/core:latest
          volumeMounts:
            - name: upload
              mountPath: /var/www/html/storage/upload
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: storage-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: firefly
  labels:
    app: mariadb
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: linuxserver/mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: mariadb-config-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: firefly
  labels:
    app: redis
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  namespace: firefly
  name: firefly
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: firefly
---
apiVersion: v1
kind: Service
metadata:
  namespace: firefly
  name: mariadb
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb
---
apiVersion: v1
kind: Service
metadata:
  namespace: firefly
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefly
  namespace: firefly
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("firefly.rvserver.online")
      kind: Rule
      services:
        - name: firefly
          port: 80
